--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "^0.0.37",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.5",
@@ -31,6 +32,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
