--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
    "compilerOptions": {
       "module": "commonjs",
-      "target": "es6",
+      "target": "2022",
       "sourceMap": true,
       "resolveJsonModule": true,
       "esModuleInterop": true
