--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.5",
+    "@types/generate-password": "^1.5.1",
     "@types/handlebars-helpers": "^0.5.3",
     "@types/method-override": "^0.0.32",
     "@types/mongodb": "^4.0.7",
@@ -36,6 +37,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "generate-password": "^1.7.0",
     "handlebars-helpers": "^0.10.0",
     "method-override": "^3.0.0",
     "mongodb": "^4.8.0",
